sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:2: error: ';' expected but '=' found.
def combSort() {gap=getValueCount() ; test:Boolean=false
                                                  ^